--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function scrollFunction() {
 
 
     <br> <br> <br>
-    <img style="width: 700px;margin-left: 16cm; border-radius: 1cm; " src="/images/index/luttequebec.png" alt="luttequebec">
+    <img style="width: 700px;margin-left: 16cm; border-radius: 1cm; " src="../images/index/luttequebec.png" alt="luttequebec">
     <h1>La Lutte dans le Monde</h1>
     <br>
     <p>la lutte est un système de combat au corps à corps et un ensemble de sports de combat impliquant des techniques
@@ -98,9 +98,9 @@ function scrollFunction() {
         Il existe un large éventail de styles avec <br> des règles variables, avec des styles historiques traditionnels et modernes.
          Le terme lutte est attesté dans le vieil anglais tardif, sous <br> le nom de wræstlunge (glossing palestram). </p>
     <br>
-     <img style="width: 700px;margin-left: 16cm" src="/images/index/oldring.jpg" alt="vieu ring">
+     <img style="width: 700px;margin-left: 16cm" src="../images/index/oldring.jpg" alt="vieu ring">
 <br><br><br><br>
-  <audio style="margin-left: 21.5cm;" controls src="/audio/WWE RING MAT SLAM & CRASHING SOUND EFFECTS.mp3"></audio>
+  <audio style="margin-left: 21.5cm;" controls src="../audio/WWE RING MAT SLAM & CRASHING SOUND EFFECTS.mp3"></audio>
 
 
 
