--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lutte Québec</title>
-    <link rel="stylesheet" href="/css/Page.css">
+    <link rel="stylesheet" href="/test2/css/Page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         h1{
@@ -84,7 +84,7 @@ function scrollFunction() {
 
 
     <br> <br> <br>
-    <img style="width: 700px;margin-left: 16cm; border-radius: 1cm; " src="../images/index/luttequebec.png" alt="luttequebec">
+    <img style="width: 700px;margin-left: 16cm; border-radius: 1cm; " src="/test2/images/index/luttequebec.png" alt="luttequebec">
     <h1>La Lutte dans le Monde</h1>
     <br>
     <p>la lutte est un système de combat au corps à corps et un ensemble de sports de combat impliquant des techniques
@@ -98,9 +98,9 @@ function scrollFunction() {
         Il existe un large éventail de styles avec <br> des règles variables, avec des styles historiques traditionnels et modernes.
          Le terme lutte est attesté dans le vieil anglais tardif, sous <br> le nom de wræstlunge (glossing palestram). </p>
     <br>
-     <img style="width: 700px;margin-left: 16cm" src="../images/index/oldring.jpg" alt="vieu ring">
+     <img style="width: 700px;margin-left: 16cm" src="/test2/images/index/oldring.jpg" alt="vieu ring">
 <br><br><br><br>
-  <audio style="margin-left: 21.5cm;" controls src="../audio/WWE RING MAT SLAM & CRASHING SOUND EFFECTS.mp3"></audio>
+  <audio style="margin-left: 21.5cm;" controls src="/test2/audio/WWE RING MAT SLAM & CRASHING SOUND EFFECTS.mp3"></audio>
 
 
 
